[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/Silver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/PauseScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -260.0
margin_right = 236.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_right = 60.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Panel" parent="MainPanel"]
self_modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 79.4103
margin_right = 96.0
margin_bottom = 119.41
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="MainPanel/Resume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -23.0
margin_right = 60.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Research" type="Panel" parent="MainPanel"]
self_modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 130.482
margin_right = 96.0
margin_bottom = 170.482
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResearchLabel" type="Label" parent="MainPanel/Research"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -23.0
margin_right = 75.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Researches"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Panel" parent="MainPanel"]
self_modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 185.486
margin_right = 96.0
margin_bottom = 225.486
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="MainPanel/Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -23.0
margin_right = 60.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="MainPanel/Resume" to="." method="_on_Resume_gui_input"]
[connection signal="mouse_entered" from="MainPanel/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="mouse_exited" from="MainPanel/Resume" to="." method="_on_Resume_mouse_exited"]
[connection signal="gui_input" from="MainPanel/Research" to="." method="_on_Research_gui_input"]
[connection signal="gui_input" from="MainPanel/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="MainPanel/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MainPanel/Exit" to="." method="_on_Exit_mouse_exited"]
